--- a/data/posts/hello2/hello2.mdx
+++ b/data/posts/hello2/hello2.mdx
@@ -1,7 +1,9 @@
 ---
-title: Hello, world2!
+title: 3 Tips To Improve Your Programming Skills
 path: /hello-world2
 date: 2019-01-29
+featuredImage: image.jpg
+tags: [learning, tag1, tag2]
 ---
 
 Below is an example of JSX embedded in Markdown. <br /> **Try and change
