--- a/data/posts/hello3/hello2.mdx
+++ b/data/posts/hello3/hello2.mdx
@@ -1,10 +1,11 @@
 ---
 title: 3 Tips To Improve Your Programming Skills
-path: /hello-world223
+path: /hello-world3
 date: 2019-01-29
 featuredImage: image.jpg
-tags: [learning, tag2]
+tags: [learning, tag1, tag2]
 ---
+
 Below is an example of JSX embedded in Markdown. <br /> **Try and change
 the background color!**
 
