--- a/data/posts/hello/hello.mdx
+++ b/data/posts/hello/hello.mdx
@@ -1,148 +1,70 @@
 ---
-title: 3 Tips To Improve Your Programming Skills
-path: /hello-world223
+title: Images in Gatsby Using gatsby-image & gatsby-plugin-sharp
+path: /images-in-gatsby
 date: 2019-01-29
 featuredImage: image.jpg
 tags: [learning, tag2]
 ---
+![Some Cover Image](./image.jpg)
+> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can *put* **Markdown** into a blockquote.
 
-```js
+In this article, we’ll take a look at the gatsby-image component and how it can simplify the process of using images in various scenarios. The steps in this guide assume you have a working [Gatsby](http://dev.nodeca.com) project. So if you haven’t already, you can get started with Gatsby by following along the Gatsby First Steps article.
+### Getting Started
+
+Let’s get started by installing the necessary plugins. Depending on the Gatsby starter you’re using, these might already be installed. Check the package.json to see if that’s the case.
+
+### Install
+We’re installing a few things here. Each play a different role in our image setup. We’ll go into further detail in a bit.
+
+```shell
 const some = {}
-```
-# h1 Heading 8-)
-## h2 Heading
-### h3 Heading
-#### h4 Heading
-##### h5 Heading
-###### h6 Heading
-
-
-## Horizontal Rules
-
-## Emphasis
-
-**This is bold text**
-
-__This is bold text__
-
-*This is italic text*
-
-_This is italic text_
-
-~~Strikethrough~~
-
-## Lists
-
-Unordered
-
-+ Create a list by starting a line with `+`, `-`, or `*`
-+ Sub-lists are made by indenting 2 spaces:
-  - Marker character change forces new list start:
-    * Ac tristique libero volutpat at
-    + Facilisis in pretium nisl aliquet
-    - Nulla volutpat aliquam velit
-+ Very easy!
-
-Ordered
-
-1. Lorem ipsum dolor sit amet
-2. Consectetur adipiscing elit
-3. Integer molestie lorem at massa
-
-
-1. You can use sequential numbers...
-1. ...or keep all the numbers as `1.`
-
-Start numbering with offset:
-
-57. foo
-1. bar
-
-## Code
-
-Inline `code`
-
-Indented code
-
-    // Some comments
-    line 1 of code
-    line 2 of code
-    line 3 of code
-
-
-Block code "fences"
 
 ```
-Sample text here...
+### Configuration
+Now we’ll add these to our gatsby-config.js.
+
+```javascript
+const path = require('path');
+
+module.exports = {
+  plugins: [
+    ...
+    'gatsby-plugin-sharp',
+    'gatsby-transformer-sharp',
+    {
+      resolve: 'gatsby-source-filesystem',
+      options: {
+        name: 'images',
+        path: path.join(__dirname, `src`, `images`),
+      },
+    },
+  ],
+}
+```
+Notice that we are configuring gatsby-source-filesystem as well. This is to create file nodes from our images so they’re available through graphql queries. For this guide, we’re placing our images in the src/images directory.
+
+As for our other plugins:
+
++ gatsby-plugin-sharp is a low-level helper that powers the connections between Sharp and gatsby-image. It also exposes several image processing functions.
++ gatsby-transformer-sharp facilitates the creation of multiples images of the right sizes and resolutions.
+
+
+
+### Working With Images
+Now that we’re set up, we can start working with images in our site. Let’s create a hero.js component to use with our images.
+
+```javascript
+import React from 'react';
+
+export default ({ data }) => (
+  <section>
+    <div>
+      <h1>Hi, I like websites.</h1>
+      <p>Sometimes I make them.</p>
+    </div>
+  </section>
+)
 ```
 
-Syntax highlighting
-
-``` js
-var foo = function (bar) {
-  return bar++;
-};
-
-console.log(foo(5));
-```
-
-## Tables
-
-| Option | Description |
-| ------ | ----------- |
-| data   | path to data files to supply the data that will be passed into templates. |
-| engine | engine to be used for processing templates. Handlebars is the default. |
-| ext    | extension to be used for dest files. |
-
-Right aligned columns
-
-| Option | Description |
-| ------:| -----------:|
-| data   | path to data files to supply the data that will be passed into templates. |
-| engine | engine to be used for processing templates. Handlebars is the default. |
-| ext    | extension to be used for dest files. |
-
-## Links
-
-[link text](http://dev.nodeca.com)
-
-[link with title](http://nodeca.github.io/pica/demo/ "title text!")
-
-Autoconverted link https://github.com/nodeca/pica (enable linkify to see)
-
-## Images
-
-![Minion](https://octodex.github.com/images/minion.png)
-![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg "The Stormtroopocat")
-
-Like links, Images also have a footnote style syntax
-
-![Alt text][id]
-
-With a reference later in the document defining the URL location:
-
-[id]: https://octodex.github.com/images/dojocat.jpg  "The Dojocat"
-
-### [Definition lists](https://github.com/markdown-it/markdown-it-deflist)
-
-Term 1
-
-:   Definition 1
-with lazy continuation.
-
-Term 2 with *inline markup*
-
-:   Definition 2
-
-        { some code, part of Definition 2 }
-
-    Third paragraph of definition 2.
-
-_Compact style:_
-
-Term 1
-  ~ Definition 1
-
-Term 2
-  ~ Definition 2a
-  ~ Definition 2b
+### Conclusion
+This is only scratching the surface of what you can do with images in Gatsby. Whether you’re looking to squeeze out as much performance as possible or create a quality experience for your users, Gatsby’s rich toolset has you covered. I encourage you to read all the linked resources and play around with the plugins to find what best suits your needs.
