--- a/data/posts/hello/hello.mdx
+++ b/data/posts/hello/hello.mdx
@@ -1,8 +1,9 @@
 ---
 title: Images in Gatsby Using gatsby-image & gatsby-plugin-sharp
 path: /images-in-gatsby
+description: This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can *put* **Markdown** into a blockquote.
 date: 2019-01-29
-featuredImage: image.jpg
+featuredImage: ./image.jpg
 tags: [learning, tag2]
 ---
 ![Some Cover Image](./image.jpg)
