--- a/data/posts/angular/methods-publicly.mdx
+++ b/data/posts/angular/methods-publicly.mdx
@@ -9,7 +9,7 @@ tags: [learning, angular]
 
 I am currently working on an angular project and one little requirement that I had, depended on a deployment in production, which involves a lot of time.
 
-To save time. The execution of this javascript code is by Google Optimizer, but our framework is Angular, so how we do?
+To save time, the execution of this javascript code is by Google Optimizer, but our framework is Angular, so how we do it?
 
 Angular zone is an execution context that persists across async tasks(Events, XMLHttpRequests, and Timers) and notifies the framework to perform change detection when an asynchronous operation has happened.
 
